# climbing_events

./:  .env.prod.example  .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  check_expired_events.py  deploy  do_backup.example  do_backup.sh  do_check_close_registration.sh  do_check_expired.sh  do_upgrade.sh  docker-compose.prod.yml  docker-compose.yml  entrypoint.py  nginx.conf  nginx.host.conf  pyproject.toml  requirements.txt  yoo.py
.github/workflows/: build-and-push.yml
config/: settings.py  urls.py
events/: about_views.py  admin.py  api_views.py  exceptions.py  forms.py  mock.py  models.py  pay_views.py  serializers.py  services.py  tests.py  urls.py  views.py  xl_tools.py
events/migrations/: 0001_initial.py  0002_customuser_yoomoney_secret_key.py  0002_remove_event_is_update_results_after_enter.py  0003_alter_event_score_type.py  0003_remove_event_yoomoney_wallet_id_event_is_pay.py  0004_alter_route_score_json.py  0004_rename_is_pay_event_is_pay_allowed.py  0005_event_score_table.py  0005_promocode.py  0006_promocode_applied_num_promocode_max_applied_num.py  0006_remove_event_flash_points_event_flash_points_pc.py  0007_event_is_premium_event_is_premium_used.py  0008_customuser_premium_price.py  0009_event_premium_price.py  0010_event_max_participants.py  0011_alter_event_description_alter_event_gym_and_more.py  0012_rename_is_premium_used_event_is_expired.py  0013_event_count_routes_num.py  0014_participant_scores.py  0015_participant_counted_routes.py  0016_paydetail.py  0017_event_reg_type_list_event_reg_type_num.py  0017_participant_french_accents_alter_event_score_type_and_more.py  0018_participant_french_score.py  0018_participant_reg_type_index.py  0019_event_price_list.py  0020_participant_phone_number_and_more.py  0021_event_pay_type.py  0022_alter_event_pay_type.py  0023_alter_event_price.py  0023_auto_20210331_1306.py  0024_auto_20210331_1324.py  0024_merge_20230403_1537.py  0025_auto_20210331_2359.py  0025_auto_20230403_1538.py  0026_alter_participant_accents_and_more.py  0027_alter_participant_counted_routes.py  0028_alter_event_is_premium.py  0029_auto_20210403_2337.py  0029_event_date_end.py  (+18 more)
events/migrations_bk/: 0026_auto_20210401_0031.py  0027_auto_20210401_0051.py  0028_event_set_max_participants.py  (+19 more)
(+105 files in other folders)
