[project]
name = "climbing-events"
version = "0.1.0"
description = "Climbing events management web application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=6.0,<6.1",
    "crispy-bootstrap5==0.7",
    "dacite==1.9.2",
    "django-active-link==0.3.0",
    "django-allauth==0.51.0",
    "django-bootstrap-datepicker-plus>=6.0.0",
    "django-braces==1.17.0",
    "django-colorfield==0.7.2",
    "django-crispy-forms==1.14.0",
    "django-debug-toolbar==3.7.0",
    "django-environ>=0.10.0",
    "django-maintenance-mode==0.23.0",
    "django-phonenumber-field==7.0.2",
    "phonenumberslite==9.0.34",
    "django-tinymce==3.5.0",
    "gunicorn==26.0.0",
    "openpyxl==3.1.5",
    "Pillow>=10.0.0",
    "psycopg2>=2.9.12",
    "psycopg2-binary>=2.9.12",
    "segno==1.6.6",
    "whitenoise==6.12.0",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.3.1",
    "django-cors-headers>=4.3.1",
]

[dependency-groups]
dev = [
    "autopep8==2.3.2",
    "flake8==7.3.0",
    "isort==8.0.1",
    "pip-review==1.3.0",
]

[tool.uv]
package = false
